force-app/main/default/objects/Session_Participation__c/Session_Participation__c.object-meta.xml
<CustomObject>
    <label>Session Participation</label>
    <nameField>
        <displayFormat>SP-{0000000000}</displayFormat>
        <label>Session Participation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Participations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>