force-app/main/default/objects/Session_Participation__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Session Participations</relationshipLabel>
    <relationshipName>Session_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>