force-app/main/default/objects/Session_Participation__c/fields/Event_Participation__c.field-meta.xml
<CustomField>
    <fullName>Event_Participation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Participation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The related events do not match.</errorMessage>
        <filterItems>
            <field>Participant__c.Event_custom__c</field>
            <operation>equals</operation>
            <valueField>$Source.Event__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Participant__c</referenceTo>
    <relationshipLabel>Session Bookings</relationshipLabel>
    <relationshipName>Session_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>