force-app/main/default/objects/Session_Participation__c/fields/Event_Ticket__c.field-meta.xml
<CustomField>
    <fullName>Event_Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Ticket</label>
    <referenceTo>Event_Ticket__c</referenceTo>
    <relationshipLabel>Session Participations</relationshipLabel>
    <relationshipName>Session_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>