force-app/main/default/objects/Session_Participation__c/fields/Industry_Terms_Need_to_be_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Industry_Terms_Need_to_be_Accepted__c</fullName>
    <formula>Session__r.Industry_Terms_Need_to_be_Accepted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry Terms Need to be Accepted</label>
    <type>Checkbox</type>
</CustomField>