force-app/main/default/objects/Session_Participation__c/fields/Lecture__c.field-meta.xml
<CustomField>
    <fullName>Lecture__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lecture</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select a Lecture that is part of the selected Session.</errorMessage>
        <filterItems>
            <field>Lecture__c.Session__c</field>
            <operation>equals</operation>
            <valueField>$Source.Session__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lecture__c</referenceTo>
    <relationshipLabel>Session Participations</relationshipLabel>
    <relationshipName>Session_Participations</relationshipName>
    <type>Lookup</type>
</CustomField>