force-app/main/default/objects/Session_Participation__c/fields/Session_Join_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_Join_Time__c</fullName>
    <label>Session Join Time</label>
    <type>DateTime</type>
</CustomField>