force-app/main/default/objects/Session_Participation__c/fields/Terms_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Terms Accepted</label>
    <type>Checkbox</type>
</CustomField>