force-app/main/default/objects/Session_Participation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Session__c</columns>
    <columns>Event__c</columns>
    <columns>Event_Participation__c</columns>
    <columns>Event_Ticket__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>